unpackaged/main/default/objects/litify_pm__Community_Matter_Status_Value__c/litify_pm__Community_Matter_Status_Value__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The metadata associated with given Community Matter Status field picklist values.</description>
    <label>Community Matter Status Value</label>
</CustomObject>