unpackaged/main/default/objects/litify_pm__Community_Matter_Status_Value__c/fields/litify_pm__Description__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>