unpackaged/main/default/objects/litify_pm__Community_Matter_Status_Value__c/fields/litify_pm__Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>