unpackaged/main/default/objects/litify_pm__Community_Matter_Status_Value__c/fields/litify_pm__Order__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Order__c</fullName>
    <description>Defines the position of this picklist entry in the status display. 0 is the top-most value.</description>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>