unpackaged/main/default/objects/litify_pm__Community_Matter_Status_Value__c/fields/litify_pm__Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Picklist_Value__c</fullName>
    <label>Picklist Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>